--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "check-splitter",
   "version": "0.1.0",
+  "homepage": "https://melphi-s.github.io/check-splitter/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
   "devDependencies": {
     "css-loader": "^6.7.3",
     "eslint-config-prettier": "^8.8.0",
+    "gh-pages": "^5.0.0",
     "node-sass": "^7.0.3",
     "prettier": "2.8.7",
     "sass-loader": "^13.2.2",
